--- a/Chiayi/main/templates/main/menu.html
+++ b/Chiayi/main/templates/main/menu.html
@@ -1,5 +1,5 @@
 <ul>
   <li><a href="{% url 'main:main' %}">來嘉旅遊</a></li>
-  <li><a href="{% url 'main:news' %}">最新資訊</a></li>
+  <li><a href="{% url 'main:news' %}">關於嘉義</a></li>
   <li><a href="{% url 'travel:travel' %}">嘉義好去處</a></li>
 </ul>
