--- a/Chiayi/main/templates/main/news.html
+++ b/Chiayi/main/templates/main/news.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 {% include 'main/menu.html' %}
-<h2>最新資訊</h2>
-<p>歡迎來到最新資訊，這裡提供最新旅遊資訊。</p>
+<h2>關於嘉義</h2>
+<p>嘉義縣古名「諸羅縣」（台語：Chu-lô-koān），地處嘉南平原，為重要農業產區。
+境內水利建設堪稱完備，土地肥沃，以農產聞名，沿海地區為重要漁業產區，為國內重要產地，加以阿里山的森林資源，曾盛極一時。
+阿里山為國際著知名的觀光風景區，縣內之國立故宮博物院南部院區則為國際知名的博物館，工業及農漁業皆為縣內重要產業。</p>
 </body>
 </html>
