--- a/Chiayi/travel/templates/travel/travel.html
+++ b/Chiayi/travel/templates/travel/travel.html
@@ -9,15 +9,21 @@
 </head>
 <body>
 {% include 'main/menu.html' %}
+{% include 'main/messages.html' %}
+{% include 'travel/searchForm.html' %}
 <h2>這裡提供嘉義的景點</h2>
-<br>
+<p class="inlineBlock"><a class="btn" href="{% url 'travel:articleCreate' %}">新增文章</a></p>
+<br><br><hr>
 {% for items in itemsList %}
   {% for item in items %}
     {% if forloop.first %}
-      <h3>{{ item.title }}</h3>
+      <h3><a href="{% url 'travel:articleRead' item.id %}">{{ item.title }}</a></h3>
+      <form class="inlineBlock" method="post" action="{% url 'travel:articleDelete' item.id %}">
+        {% csrf_token %}
+        <input class="btn" type="submit" value="刪除">
+      </form>
       <p>發表時間：{{ item.pubDateTime|date:'Y-m-d H:i' }}</p>
       <div class=articleContent>{{ item.content|linebreaks|truncatechars_html:30 }}</div>
-      <p>讚：{{ item.likes }}</p>
     {% else %}
       <p>
         <span class=comment>{{ item.content }}</span><br>
